css collapse solved

--- a/src/pages/Location.css
+++ b/src/pages/Location.css
@@ -16,3 +16,7 @@
 .contentWrapper {
   flex: 1;
 }
+
+.titletext {
+  font-size: 30px;
+}
